jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  type: ClusterIP 
  ports:
    - name: http
      protocol: TCP
      port: 8096         
      targetPort: 8096  
    - name: discovery
      protocol: UDP
      port: 7359
      targetPort: 7359
