jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-httproute
  namespace: jellyfin
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - jellyfin.joshuadallacqua.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfin
      namespace: jellyfin
      port: 8096
